--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,9 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
-
+    <ion-nav-bar class = 'bar-positive'>
+    </ion-nav-bar>
+    <ion-nav-view></ion-nav-view>
     <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Google Maps Starter</h1>
