--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,12 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
+    <!-- controller for the second map -->
+    <!--script src="js/controller.js"></script-->
+
   </head>
+  
   <body ng-app="starter">
     <ion-nav-bar class = 'bar-positive'>
     </ion-nav-bar>
@@ -30,7 +35,7 @@
         <h1 class="title">Ionic Google Maps Starter</h1>
       </ion-header-bar>
       <ion-content>
-          <div id="map_canvas"></div>
+          <!--div id="map_canvas"></div-->
       </ion-content>
     </ion-pane>
   </body>
